--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,6 @@ jobs:
         with:
           # 下方的name格式为：Docker Hub ID/自定义镜像名称
           name: lj98/xr
-          username: '${{ secrets.lj98 }}'
-          password: '${{ secrets.735728lj }}'
+          username: lj98
+          password: 735728lj
 
